# audio-unpack-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: package_release.py
skills/audio-unpack-cli/: SKILL.md
skills/audio-unpack-cli/agents/: openai.yaml
src/: main.rs
