[package]
name = "audio-unpack-cli"
version = "0.1.0"
edition = "2021"
description = "Fast cross-platform audio container decoder"
license = "MIT"
repository = "https://github.com/MapleCity1314/audio-unpack-cli"

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
id3 = "1.14"
metaflac = "0.2"
rayon = "1.10"
serde_json = "1"
walkdir = "2.5"
